feat: public homepage faza 3
